feat: configure enterprise smtp
